+ Added new parameter "-xpgtPath:<path_to_XPGT_file>" to provide alternative path to XPGT template file
+ Added new tab in settings to setup XPGT template 
+ Added two configuration XML parameters "UseAdobeTemplate" (True - to add Adobe XPGT file to resulting ePub, default False) and "AdobeTemplatePath" - path to XPGT template file
* Fixed settings tabs not displayed properly on XP (due to XP bug with visual styles)
* If conversion critically failed for some reason, the converter no longer leaves defective (not finished) output file


1.0.46
+ Added ".poem_author" style element to have it different from citation author in epigraphs
+ Added 2 or more returns from notes section in case referenced from more than one place, before only first backlink worked
+ Added ability to read some badly formated FB2 files (xmlns="") , for this ubdated to FB2Library.dll v 1.0.17
* Changed the way notes section is generated, now it looks a bit different
* Fixed anchors not converted in poem and citation authors
* Fixed a bug in shell extension where "Here" destination did not worked it there were other target destinations in INI
* Fixed log line bug in case can't delete file
* Fixed a bug where files that did not contained FB2 data were deleted in case *.* mask and delete parameters were used
* Updated to v1.0.15 of EpubLib.dll to fix mimetype extra characters issue (validator failed while checking)
* Fixed rare crash when fixing the misformed XML file using own algorithm
* Fixed rare crash in some drop character processing
* Fixed rare crash in misformated FB2 files related to internal links
* Fixed crash if FB2 contained internal link with only # in a reference (href) field


1.0.45
+ Added new setting ("ShowInShell=" and "ShowInGUI") to FB2EPUBExt.INI file to control user available destination paths
+ Added new setting "SingleDestination=" to [TARGETS] section of FB2EPUBExt.INI. If set to -1 all works as before, 