@@ -692,57 +692,57 @@ namespace Fb2ePub
 
         private static void ShowHelp()
         {
-            Console.WriteLine();
-            Console.WriteLine("Usage: ");
-            Console.WriteLine();
-            Console.WriteLine("FB2EPUB <input_fb2_file_name> [-options]");
-            Console.WriteLine("\t or");
-            Console.WriteLine("FB2EPUB <input_fb2_file> <output_epub_file_name> [-options]");
-            Console.WriteLine("\t or");
-            Console.WriteLine("FB2EPUB <input_path> [-options]");
-            Console.WriteLine("\t or");
-            Console.WriteLine("FB2EPUB [-registration_options]");
-            Console.WriteLine();
-            Console.WriteLine();
-            Console.WriteLine("Possible options are :");
-            Console.WriteLine();
-            Console.WriteLine("-t:[0/1/2/3/4/5] - transliterate title and chapter names , \n\t-t:0 disable transliteration (default) , \n\t-t:1 enable transliteration (used for devices that do not support cyrillic fonts like not russified Sony readers)\n\t 2 - transliterate file name, 3 - transliterate both file name and file metadata");
-            Console.WriteLine("\n\t-t:4 (Kindle mode) transliterates book metadata without TOC, \n\t-t:5 transliterates book metadata and filename but not TOC");
-            Console.WriteLine();
-            Console.WriteLine("-o:<output_path> - set output path, the resulting file will be generated in folder prtovided (example: \"fb2epub mybook.fb2 /o:c:\\books\\\")");
-            Console.WriteLine();
-            Console.WriteLine("-r/-u registration options used to register/unregister right click shell extension");
-            Console.WriteLine();
-            Console.WriteLine("-f2i:[0/1] - enable (1) or disable (0) generation of FB2 information page in target EPUB");
-            Console.WriteLine();
-            Console.WriteLine("-s - searches for files to convert in subfolders");
-            Console.WriteLine();
-            Console.WriteLine("-m:[0/1/2/3] - when searching in folders search either *.fb (0) or  *.fb2;*.fb2.zip;*.fb2.rar (1 - default) or *.zip;*.rar;*.fb2 (2) or *.* (3) files");
-            Console.WriteLine();
-            Console.WriteLine("-deletesource - deletes the source file upon successful conversion");
-            Console.WriteLine();
-            Console.WriteLine("-seqadd:[0/1] - enable (1, default) or disable (0) adding sequences abbreviations to book title name");
-            Console.WriteLine();
-            Console.WriteLine("-seqformat:[format_string] - controls book descriiption title formating is seq number present");
-            Console.WriteLine();
-            Console.WriteLine("-nseqformat:[format_string] - controls book descriiption title formating in no seq. number");
-            Console.WriteLine();
-            Console.WriteLine("-nnseqformat:[format_string] - controls book descriiption title formating in no series");
-            Console.WriteLine();
-            Console.WriteLine("-aformat:[format_string] - controls author name formating in description");
-            Console.WriteLine();
-            Console.WriteLine("-svformat:[format_string] - controls author 'save as' name formating in description");
-            Console.WriteLine();
-            Console.WriteLine("-flat:[0/1] - enable () or disable (0, default) \"flat structure mode\" - mode when no subfolders created inside ePUB archive, workaround of bug on some readers");
-            Console.WriteLine();
-            Console.WriteLine("-emstyle:[0/1] - enable (1) or disable (0, default) embeding CCS styles into XHTML files instead referensing them");
-            Console.WriteLine();
-            Console.WriteLine("-xpgt:[0/1] - enable (1) or disable (0, default) embeding of Adobe XPGT template into resulting ePub File");
-            Console.WriteLine();
-            Console.WriteLine("-xpgtPath:[file_path] - Forces converter to use Adobe XPGT template file specified by this parameter instead of default XPGT template \"template.xpgt\" located in \"Template\" subfolder");
-            Console.WriteLine();
-            Console.WriteLine();
-            Console.WriteLine("Press any key to continue...");
+            ConsoleWriter conWriter = new ConsoleWriter();
+            conWriter.WriteLine("\nUsage: ");
+            conWriter.WriteLine();
+            conWriter.WriteLine("FB2EPUB <input_fb2_file_name> [-options]");
+            conWriter.WriteLine("\t or");
+            conWriter.WriteLine("FB2EPUB <input_fb2_file> <output_epub_file_name> [-options]");
+            conWriter.WriteLine("\t or");
+            conWriter.WriteLine("FB2EPUB <input_path> [-options]");
+            conWriter.WriteLine("\t or");
+            conWriter.WriteLine("FB2EPUB [-registration_options]");
+            conWriter.WriteLine();
+            conWriter.WriteLine();
+            conWriter.WriteLine("Possible options are :");
+            conWriter.WriteLine();
+            conWriter.WriteLine("-t:[0/1/2/3/4/5] - transliterate title and chapter names , \n\t-t:0 disable transliteration (default) , \n\t-t:1 enable transliteration (used for devices that do not support cyrillic fonts like not russified Sony readers)\n\t 2 - transliterate file name, 3 - transliterate both file name and file metadata");
+            conWriter.WriteLine("\n\t-t:4 (Kindle mode) transliterates book metadata without TOC, \n\t-t:5 transliterates book metadata and filename but not TOC");
+            conWriter.WriteLine();
+            conWriter.WriteLine("-o:<output_path> - set output path, the resulting file will be generated in folder prtovided (example: \"fb2epub mybook.fb2 /o:c:\\books\\\")");
+            conWriter.WriteLine();
+            conWriter.WriteLine("-r/-u registration options used to register/unregister right click shell extension");
+            conWriter.WriteLine();
+            conWriter.WriteLine("-f2i:[0/1] - enable (1) or disable (0) generation of FB2 information page in target EPUB");
+            conWriter.WriteLine();
+            conWriter.WriteLine("-s - searches for files to convert in subfolders");
+            conWriter.WriteLine();
+            conWriter.WriteLine("-m:[0/1/2/3] - when searching in folders search either *.fb (0) or  *.fb2;*.fb2.zip;*.fb2.rar (1 - default) or *.zip;*.rar;*.fb2 (2) or *.* (3) files");
+            conWriter.WriteLine();
+            conWriter.WriteLine("-deletesource - deletes the source file upon successful conversion");
+            conWriter.WriteLine();
+            conWriter.WriteLine("-seqadd:[0/1] - enable (1, default) or disable (0) adding sequences abbreviations to book title name");
+            conWriter.WriteLine();
+            conWriter.WriteLine("-seqformat:[format_string] - controls book descriiption title formating is seq number present");
+            conWriter.WriteLine();
+            conWriter.WriteLine("-nseqformat:[format_string] - controls book descriiption title formating in no seq. number");
+            conWriter.WriteLine();
+            conWriter.WriteLine("-nnseqformat:[format_string] - controls book descriiption title formating in no series");
+            conWriter.WriteLine();
+            conWriter.WriteLine("-aformat:[format_string] - controls author name formating in description");
+            conWriter.WriteLine();
+            conWriter.WriteLine("-svformat:[format_string] - controls author 'save as' name formating in description");
+            conWriter.WriteLine();
+            conWriter.WriteLine("-flat:[0/1] - enable () or disable (0, default) \"flat structure mode\" - mode when no subfolders created inside ePUB archive, workaround of bug on some readers");
+            conWriter.WriteLine();
+            conWriter.WriteLine("-emstyle:[0/1] - enable (1) or disable (0, default) embeding CCS styles into XHTML files instead referensing them");
+            conWriter.WriteLine();
+            conWriter.WriteLine("-xpgt:[0/1] - enable (1) or disable (0, default) embeding of Adobe XPGT template into resulting ePub File");
+            conWriter.WriteLine();
+            conWriter.WriteLine("-xpgtPath:[file_path] - Forces converter to use Adobe XPGT template file specified by this parameter instead of default XPGT template \"template.xpgt\" located in \"Template\" subfolder");
+            conWriter.WriteLine();
+            conWriter.WriteLine();
+            conWriter.WriteLine("Press any key to exit...");
             Console.ReadKey();
         }
 
