@@ -4,6 +4,7 @@
 + Added new parameter "-xpgtPath:<path_to_XPGT_file>" to provide alternative path to XPGT template file
 + Added new tab in settings to setup XPGT template 
 + Added two configuration XML parameters "UseAdobeTemplate" (True - to add Adobe XPGT file to resulting ePub, default False) and "AdobeTemplatePath" - path to XPGT template file
++ Changed command line utility console output to show more than one page of help
 * Fixed settings tabs not displayed properly on XP (due to XP bug with visual styles)
 * If conversion critically failed for some reason, the converter no longer leaves defective (not finished) output file
 
